[gd_scene load_steps=9 format=3 uid="uid://bgcm6p3yclnui"]

[ext_resource type="Script" uid="uid://cg21jw8dfjd2c" path="res://scripts/goomba.gd" id="1_u6sa4"]
[ext_resource type="Texture2D" uid="uid://bhojvh7sw4d0h" path="res://assets/textures/snake-Sheet.png" id="2_u6sa4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1kgul"]
atlas = ExtResource("2_u6sa4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8tfd"]
atlas = ExtResource("2_u6sa4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptxfd"]
atlas = ExtResource("2_u6sa4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fj7dg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kgul")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8tfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptxfd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj7dg"]
size = Vector2(10, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16sg7"]
size = Vector2(16, 10)

[node name="SnakeEnemy" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_u6sa4")

[node name="Visual" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fj7dg")
frame_progress = 0.026241573

[node name="HitZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_fj7dg")

[node name="KillZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_16sg7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="HitZone" to="." method="_on_hit_zone_body_entered"]
[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
